tests/fixtures/invalid/pow_set_none_int.py
# Cannot call pow() with Set[int], None, Int
x = pow({1, 2, 3}, None, 1)
